# NorthPort

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
backend/schemas/nport/: Abbr_Codes.xsl  N-PORT Sample 1.xml  N-PORT Sample 2.xml  N-PORT Sample 4.xml  N-PORT Sample 5.xml  N-PORT Sample 6.xml  N-PORT_fundInfo.xsl  N-PORT_schPortfolio.xsl  eis_ISO_StateCodes.xsd  eis_NPORT_Filer.xsd  eis_NPORT_common.xsd  iso_State_Codes.xsl  util.xsl
docs/: NP_DER_001_RESOLUTION.md  PRE_PUSH_VERIFICATION.md  RULES_AND_VALIDITY.md  field_mapping.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DataGrid.tsx  MetricTile.tsx  StatusPill.tsx
frontend/src/lib/: api.ts  referenceRun.ts
frontend/src/screens/: AuditReport.tsx  BatchMonitor.tsx  Dashboard.tsx  FilingDetail.tsx  HomePage.tsx  RulesRegistry.tsx  UploadScreen.tsx
northport/: __init__.py
northport/backend/: __init__.py  runtime_check.py
northport/backend/api/: __init__.py  app.py
northport/backend/generate/: __init__.py  roundtrip.py  xml_builder.py
northport/backend/harness/: __init__.py  cache.py  dispatcher.py  worker.py
northport/backend/ingest/: __init__.py  dta_adapter.py  inspect_dta.py  loaders.py  xml_stream.py
northport/backend/models/: __init__.py  filing.py
northport/backend/schemas/: SCHEMA_SOURCE.md
northport/backend/tests/: test_api.py  test_cache_and_batch.py  test_ingest.py  test_real_fixtures.py  (+2 more)
(+15 files in other folders)
